--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,9 +14,9 @@
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 10000; /* Sit on top */
-  left: 50%;
-  top: 20%;
+  z-index: 100000 !important; /* Sit on top */
+  left: 0%;
+  top: 0%;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
