--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
     /* visibility: visible; */
     background-color: rgba(255,255,255,0.7);
     position: fixed;
-    z-index: +10000 !important;
+    z-index: 500000 !important;
     width: 100%;
     height:100%;
     display:block;
